---
source: fortitude/src/rules/style/mod.rs
expression: diagnostics
snapshot_kind: text
---
warning: ./resources/test/fixtures/style/S051.f90:2:9: S051 deprecated relational operator '.gt.', prefer '>' instead
  |
1 | program test
2 |   if (0 .gt. 1) error stop
  |         ^^^^ S051
3 |   if (1 .le. 0) error stop
4 |   if (a.eq.b.and.a.ne.b) error stop
  |

warning: ./resources/test/fixtures/style/S051.f90:3:9: S051 deprecated relational operator '.le.', prefer '<=' instead
  |
1 | program test
2 |   if (0 .gt. 1) error stop
3 |   if (1 .le. 0) error stop
  |         ^^^^ S051
4 |   if (a.eq.b.and.a.ne.b) error stop
5 |   if (1 == 2) error stop  ! OK
  |

warning: ./resources/test/fixtures/style/S051.f90:4:8: S051 deprecated relational operator '.eq.', prefer '==' instead
  |
2 |   if (0 .gt. 1) error stop
3 |   if (1 .le. 0) error stop
4 |   if (a.eq.b.and.a.ne.b) error stop
  |        ^^^^ S051
5 |   if (1 == 2) error stop  ! OK
6 |   if (2 /= 2) error stop  ! OK
  |

warning: ./resources/test/fixtures/style/S051.f90:4:19: S051 deprecated relational operator '.ne.', prefer '/=' instead
  |
2 |   if (0 .gt. 1) error stop
3 |   if (1 .le. 0) error stop
4 |   if (a.eq.b.and.a.ne.b) error stop
  |                   ^^^^ S051
5 |   if (1 == 2) error stop  ! OK
6 |   if (2 /= 2) error stop  ! OK
  |
